# extension-ffi

./: .gitignore
adjmat1dmul/: CMakeLists.txt  build.py  test.py
adjmat1dmul/functions/: add.py
adjmat1dmul/src/: my_lib.c  my_lib.h  test.cpp
